trunk/Archive2/75/a016dacfe13987/output
main.cpp:3:0: warning: ignoring #pragma error  [-Wunknown-pragmas]
     #pragma error("HALP")
 ^
main.cpp:2:0: error: unterminated #if
 #if defined(TESTING) && (TESTING == 1)
 ^
